[package]
name = "sataddress"
version = "0.1.0"
edition = "2021"
default-run="server"

[profile.dev]
debug = 2

[profile.release]
debug = 1
incremental = true
lto = "off"
# results in final image that's 1/4 of size
strip = true

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
hyper-tls = "0.5.0"
hyper-socks2 = "0.6.0"
sled = "0.34.7"
# openssl = { version = "0.10.41", features = ["vendored"] }
# openssl = "0.10.41"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1.0"
anyhow = "1.0.65"
base64 = "0.13.0"
hex = "0.4.3"
askama = "0.11.1"
envconfig = "0.10.0"
sha2 = "0.10.6"
percent-encoding = "2.2.0"
validator = { version = "0.16.0", features = ["derive"] }
serde_path_to_error = "0.1.8"
thiserror = "1.0.35"
strum = "0.24.1"
strum_macros = "0.24"
futures = { version = "0.3", default-features = false }

# cli deps
clap = { version = "4.0.4", features = ["derive"] }
ansi_term = "0.12.1"

# [package.metadata.cross.target.x86_64-unknown-linux-musl]
# dockerfile = "./Dockerfile.x86_64"
